# DNNs-Playground

./: .gitignore  COMP5511_Tutorial-7.ipynb  README.md  pyproject.toml  requirements.txt  task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb
qtables/: qtables.md
